<resources>
    <string name="app_name">FreeBelt</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_title">Demo</string>
    <string name="personalinfo_title">设置个人信息</string>
    <string name="personalinfo_warning">我们将根据您的个人资料指定您的个人计划</string>
    <string name="born_unit">&#160;&#160;年出生</string>
    <string name="next">下一步</string>
    <string name="waistline_unit">&#160;&#160;码</string>
    <string name="weight_unit">&#160;&#160;KG</string>
    <string name="height_unit">&#160;&#160;m</string>
    <string name="long_sit">久坐(次)</string>
    <string name="distance">路程(km)</string>
    <string name="step">步数(步)</string>
    <string name="company_info">一贝腰带 陪你</string>
    <string name="healthy_life">健康生活</string>
    <string name="searching_devices">正在搜索设备</string>
    <string name="select_devices">请选取设备</string>
    <string name="confirm_exit">退出贝健康吗？</string>
    <string name="get_code">获取验证码</string>
    <string name="phone_num">手机号码</string>
    <string name="code">验证码</string>
    <string name="new_password">新密码</string>
    <string name="confirm">确定</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="cancel">取消</string>
    <string name="reacquire_code">s秒后重新获取验证码</string>
    <string name="about_us">关于我们</string>
    <string name="app_version">app版本</string>
    <string name="fireware_version">固件版本</string>
    <string name="can_not_find_version_name">无法获取当前应用版本号</string>
    <string name="ebelt_website">一贝官网</string>
    <string name="app_version_value">1.5</string>
    <string name="fireware_version_value">未连接腰带</string>
    <string name="ebelt_website_address">www.ebelt.cn</string>
	<string name="weixin_fuwuhao">微信服务号</string>
	<string name="e_belt">e_belt</string>
	<string name="to_score">去评分</string>
    <string name="weixin_login">微信登录</string>
    <string name="qq_login">QQ登录</string>
    <string name="phone_and_mail">手机/邮箱</string>
    <string name="password">密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="phone_register">手机注册</string>
    <string name="date">9月6日</string>
    <string name="connecting">正在连接中</string>
    <string name="connect_success_sycn">连接成功后自动同步详情</string>
    <string name="update_time">19:00更新</string>
    <string name="my_ebelt">我的腰带</string>
    <string name="me">我</string>
    <string name="share">分享</string>
    <string name="height">身高m</string>
    <string name="weight">体重kg</string>
    <string name="waistline">腰围码</string>
    <string name="target">目标</string>
    <string name="step_number">10000步</string>
    <string name="longsit_remind">久坐推送提醒</string>
    <string name="about">关于</string>
    <string name="feedback">反馈</string>
    <string name="exit_account">退出帐号</string>
    <string name="data_revert">数据恢复</string>
    <string name="version_update">版本更新</string>
    <string name="check_version">正在检测最新版本...</string>
    <string name="is_lastest_version">已是最新版本</string>
    <string name="conect_time_out">连接超时，请检查网络是否畅通</string>
    <string name="has_new_version">有新版本可用</string>
    <string name="disclaimer">点击“注册”即表示你同意《免责协议》</string>
    <string name="connect_ebelt">连接腰带</string>
    <string name="step_over">跳过</string>
    <string name="let_phone_close_to_ebelt">将手机靠近腰带</string>
    <string name="click_ebelt_scan">并点击腰带图标进行扫描</string>
    <string name="connect">连接</string>
    <string name="complete">完成</string>
    <string name="step_unit">步</string>
    <string name="caluly">卡路里(cal)</string>
    <string name="day">日</string>
    <string name="week">周</string>
    <string name="month">月</string>
    <string name="searching_failed">搜索失败</string>
    <string name="setup_sex">设置性别</string>
    <string name="women">女</string>
    <string name="man">男</string>
    <string name="version_code_value">版本：V2.0.2</string>
    <string name="no_device">附近无设备</string>
    <string name="scan_failed">扫描失败</string>
    <string name="time_set_up">久坐时长设置</string>
    <string name="ring">铃声</string>
    <string name="shock">震动</string>
    <string name="min">分钟</string>
    <string name="longsit_setting">久坐提醒设置</string>
    <string name="remind_begin_time">提醒开始时间</string>
    <string name="remind_end_time">提醒结束时间</string>
    <string name="open_longsit_remind">久坐提醒</string>
    <string name="unbind_ebelt_yet">尚未绑定腰带 </string>
    <string name="close_remind_no_recive">关闭后将不会接收到久坐提醒</string>
    <string name="upload_head">上传头像</string>
    <string name="head">这里是HeadView</string>
    <string name="pull_to_refresh">下拉同步数据</string>
    <string name="release_to_refresh">释放立即同步</string>
    <string name="check_connecting">检测连接...</string>
    <string name="refreshing">正在连接...</string>
    <string name="refresh_succeed">已连接成功</string>
    <string name="refresh_fail">连接失败</string>
    <string name="sync_fail">同步失败</string>
    <string name="is_lastest_data">这已是最后的数据</string>
    <string name="sync_over_yet_try_late">刚刚同步完数据,稍后再同步吧</string>
    <string name="monday">星期一</string>
    <string name="tuesday">星期二</string>
    <string name="wednesday">星期三</string>
    <string name="thrusday">星期四</string>
    <string name="friday">星期五</string>
    <string name="saturday">星期六</string>
    <string name="sunday">星期日</string>
    <string name="one">一</string>
    <string name="two">二</string>
    <string name="three">三</string>
    <string name="four">四</string>
    <string name="five">五</string>
    <string name="six">六</string>
    <string name="sync_over_just">刚刚同步结束</string>
    <string name="pre_sync_at">上次同步于</string>
    <string name="several_minutes_ago">分钟前</string>
    <string name="several_hours_ago">小时前</string>
    <string name="at_yesterday_hh_mm_sync">于昨天 HH:mm同步</string>
    <string name="at_month_day_hh_mm_sync">于MM月dd日 HH:mm同步</string>
    <string name="today">今天</string>
    <string name="yestoday">昨天</string>
    <string name="today_step">今日步数</string>
    <string name="sync_fail_try_again">同步数据失败,请您靠近皮带在试一次</string>
    <string name="syncing">正在同步中...</string>
    <string name="confirm_exit_">确定退出?</string>
    <string name="exit_not_recive_message">退出后将收不到“久坐提醒”消息哦</string>
    <string name="remind_exit_background">提醒(退至后台)</string>
    <string name="not_remind">不提醒</string>
    <string name="syncing_now">正在同步</string>
    <string name="sync_success">同步成功</string>
    <string name="sync_data">数据同步</string>
    <string name="loading">正加载</string>
    <string name="save_head_wrong_check_sdcard">无法保存上传的头像，请检查SD卡是否挂载</string>
    <string name="choose_picture">选择图片</string>
    <string name="phone_number_password_code_null">手机或密码或验证码不能为空!</string>
    <string name="phone_number_password_null">手机或密码不能为空</string>
    <string name="phone_number_null">手机号码不能为空</string>
    <string name="fix_password_success">修改密码成功</string>
    <string name="code_has_send">验证码已发送</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail_phone_number_password_wrong">登录失败，用户名或密码错误。</string>
    <string name="open_soon">即将开放</string>
    <string name="register_success">注册成功</string>
	<string name="net_wrong">获取验证码失败,确保网络保持通畅</string>
    <string name="search_ebelt">查找腰带</string>
    <string name="hh_mm_update">HH:mm更新</string>
    <string name="mm_month_dd_day">MM月dd日</string>
    <string name="long_sit_remind">久坐提醒</string>
    <string name="you_sit_too_long">您已经坐很久了哦</string>
    <string name="device_has_connected">设备已连接</string>
    <string name="device_bind_success">设备绑定成功</string>
    <string name="binding_device">正在绑定设备</string>
    <string name="hour">小时</string>
    <string name="minutes">分</string>
    <string name="setup_longsit_success">久坐设置成功</string>
    <string name="setup_longsit_open_fail">久坐设置打开失败</string>
    <string name="longsit_setup_close_fail">久坐设置关闭失败</string>
    <string name="longsit_setup_close_success">久坐设置关闭成功</string>
    <string name="end_time_not_earlier_than_start_time">结束时间不能早于开始时间哦</string>
    <string name="confirm_back">确定返回？</string>
    <string name="back_will_lost_unsave_settings">返回后将丢失未保存的设置</string>
    <string name="confirm_unbind_ebelt">确定要解绑腰带？</string>
    <string name="confirm_update_fireware_version">确定要更新固件？</string>
    <string name="confirm_revert_factory_set">确定要恢复出厂设置？</string>
    <string name="xinghao_d013">型号：D013A V</string>
    <string name="sync_complete">同步完成</string>
    <string name="update_progress">升级进度:</string>
    <string name="update_fireware_complete">固件升级完成</string>
    <string name="update_fireware_fail">固件升级失败</string>
    <string name="fireware_is_lastest">当前固件已经是最新固件</string>
    <string name="qurey_fireware_version">查询当前固件版本</string>
    <string name="begin_update_fireware_version">升级固件开始。。。</string>
    <string name="revert_factory_set_success">恢复出厂设置成功</string>
    <string name="revert_factory_set_fail">恢复出厂设置失败</string>
    <string name="factory_set">恢复出厂</string>
    <string name="update_fireware">固件升级</string>
    <string name="unbind">解除绑定</string>
    <string name="share_success">分享成功.</string>
    <string name="share_failed">分享失败</string>
    <string name="without_authorization">没有授权</string>
    <string name="share_url">http://www.ebelt.cn</string>
    <string name="share_title">ebelt智能腰带，您的健康管理助手</string>
    <string name="share_content">生命在于运动，今天我走了这么多步，不服来战！</string>
    <string name="year">年</string>
    <string name="setup_longsit_time">设置久坐时长</string>
    <string name="setup_begin_time">设置开始时间</string>
    <string name="setup_end_time">设置结束时间</string>
    <string name="anti_lost_remind">手机响铃提醒</string>
    <string name="ebelt_lost_remind">皮带蜂鸣提醒</string>
    <string name="anti_lost">手机防丢</string>
    <string name="setup_antilost_distance">设置防丢距离</string>
    <string name="default_path">默认</string>
    <string name="no_alert_area">勿扰区域</string>
    <string name="no_alert_message">选择信任wifi,当手机连接该wifi时App将不会有防丢提醒</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="xinren_wifi">信任Wi-Fi</string>
    <string name="click_to_add_wi_fi">点击添加Wi-Fi</string>
    <string name="setup_already">已设置</string>
    <string name="select_xinren_wifi">选择信任Wi-Fi</string>
    <string name="setup_age">设置年龄</string>
    <string name="setup_height">设置身高</string>
    <string name="push_up">上拉查看久坐详情</string>
    <string name="sports_time">活动时间(h)</string>
    <string name="date_week">9月6号 星期天</string>
    <string name="sit_time">静坐时间(分)</string>
    <string name="sports_time_min">活动时间(分)</string>
    <string name="sports">活动</string>
    <string name="sit">静坐</string>
    <string name="sit_time_period">久坐时段</string>
    <string name="click_to_bind_ebelt">请敲击皮带头绑定连接</string>
    <string name="bind_failed">绑定失败</string>
    <string name="check_device_close_phone_to_ebelt">请检查设备是否选择正确，手机尽量靠近皮带</string>
    <string name="rechoose">重新选取</string>
    <string name="message_check_fail">信息验证失败</string>
    <string name="choose_start_time">选择开始时间</string>
    <string name="clock">时</string>
    <string name="setup_waistline">设置腰围</string>
    <string name="setup_weight">设置体重</string>
    <string name="setup">设置</string>
    <string name="s_sport">轻度活动</string>
	<string name="gandeibucuo">干得不错，下次再少坐会儿！</string>
	<string name="xuanyaoyixia">炫耀一下</string>
	<string name="sport_type_longsit">久坐</string>
	<string name="sport_type_sport">运动</string>
	<string name="ceju">测距</string>
	<string name="begin_ceju">开始测距</string>
	<string name="ceju_ing">正在测距中…</string>
	<string name="ceju_ing_info">请尽量以正常步伐走向终点</string>
	<string name="bushu">步数:&#160;%1$d&#160;步</string>
	<string name="yongshi">用时:&#160;%1$d&#160;分钟 %2$d&#160;秒</string>
	<string name="sudu">速度:&#160;%1$.1f&#160;米/分钟</string>
	<string name="pinlv">频率:&#160;%1$.1f&#160;步/分钟</string>
	<string name="buchang">步长:&#160;%1$.2f&#160;米</string>
	<string name="juli_m">距离(米):</string>
	<string name="name">名称:</string>
	<string name="juli">距离:</string>
	<string name="input_ps">请输入备注信息</string>
</resources>