<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_popup_info"
    style="@style/DialogBg" >

    <LinearLayout style="@style/DialogTitleBg" >

        <ImageView
            android:id="@+id/id_imageview_popup_icon"
            style="@style/DialogTitleIcon"
            android:src="@drawable/o2o_popup_info" />

        <TextView
            android:id="@+id/id_textview_popup_title"
            style="@style/DialogTitleText"
            android:text="@string/message_check_fail" />
    </LinearLayout>

    <ImageView style="@style/DialogTitleLine" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/id_textview_popup_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13.0dp"
            android:layout_marginRight="13.0dp"
            android:layout_marginTop="14.5dp"
            android:text="lsjdf;lasjfd;ladjf;lsadjf;lsadkjf;saldfjasdsfasdfasfdsadfsadfa"
            android:textColor="#000000"
            android:textSize="14.0dp" />
    </ScrollView>

    <LinearLayout style="@style/DialogButtonBg" >

        <TextView
            android:id="@+id/id_textview_popup_ok"
            style="@style/DialogButtonOk"
            android:text="@string/confirm" />

        <TextView
            android:id="@+id/id_textview_popup_cannel"
            style="@style/DialogButtonCannel"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>