<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:orientation="vertical" >
    
   <LinearLayout 
       android:id="@+id/id_ll1"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginLeft="30dp"
       android:layout_marginRight="30dp"
       >
       <TextView 
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/name"
           android:textColor="@color/white"
           android:textSize="18sp"
           />
       <EditText 
           android:id="@+id/id_edittext_info"
           android:layout_width="0dp"
           android:layout_weight="5"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="18sp"
           android:textColor="@color/white"
           android:hint="@string/input_ps"
           />
       <requestFocus />
   </LinearLayout>
   
   <LinearLayout 
       android:id="@+id/id_ll2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal"
       android:layout_marginTop="40dp"
       android:layout_marginLeft="30dp"
       android:layout_marginRight="30dp"
       >
       <TextView 
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_weight="1"
           android:text="@string/juli"
           android:textColor="@color/white"
           android:textSize="18sp"
           />
       <TextView
           android:id="@+id/id_textview_ceju_m"
           android:layout_width="0dp"
           android:layout_weight="5"
           android:layout_height="wrap_content"
           android:gravity="center"
           android:textSize="18sp"
           android:textColor="@color/white"
           />
   </LinearLayout>
   
     <TextView 
 		    android:id="@+id/id_textview_save_data"
 		    android:layout_height="40dp"
 		    android:layout_width="100dp"
 		    android:layout_marginTop="50dp"
 		    android:layout_gravity="center_horizontal"
 		    android:textSize="14sp"
 		    android:textColor="@color/white"
 		    android:text="@string/confirm"
 		    android:gravity="center"
 		    android:background="@drawable/connect_yaodai"
 			/>
</LinearLayout>
