<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    >
    
    
    			<LinearLayout
                    android:id="@+id/id_linearlayout_title"
                    style="@style/CommonTitleBg" >

                    <LinearLayout
                        android:id="@+id/id_linearlayout_title_left"
                        style="@style/CommonTitleLeftBg" >

                        <ImageView
                            style="@style/CommonTitleLeftImg"
                             />
                    </LinearLayout>

                   <LinearLayout
                        android:id="@+id/id_linearlayout_title_center"
                        style="@style/CommonTitleCenterBg"
                        android:gravity="center"
                        >
       	<RadioGroup    
       		android:id="@+id/id_rg"    
        	android:layout_margin="10dip"    
        	android:layout_width="120dip"    
       	 	android:layout_height="30dip"   
        	android:layout_gravity="center"    
        	android:orientation="horizontal">    
            <RadioButton     
            android:id="@+id/rb0"    
            android:layout_height="wrap_content"    
            android:layout_width="0dip"    
            android:layout_weight="1"    
            android:button="@null"    
            android:text="@string/sport_type_longsit"    
            android:checked="true"  
            android:textSize="15sp"    
            android:gravity="center"    
            android:paddingTop="6dip"  
            android:paddingBottom="6dip"  
            android:textColor="@drawable/title_text_sel"    
            android:background="@drawable/rb_bg_01"/>

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/rb_bg_02"
                android:button="@null"
                android:gravity="center"
                android:paddingBottom="6dip"
                android:paddingTop="6dip"
                android:text="@string/sport_type_sport"
                android:textColor="@drawable/title_text_sel"
                android:textSize="15sp" />
    
    </RadioGroup> 

                    </LinearLayout>

                   <LinearLayout
                        android:id="@+id/id_linearlayout_title_right"
                        style="@style/CommonTitleRightBg" >
						<TextView 
						    android:id="@+id/id_textview_cancel"
						    android:layout_width="wrap_content"
						    android:layout_height="wrap_content"
						    android:text="@string/cancel"
						    android:textColor="#41b1f9"
						    android:textSize="15sp">
						    
						</TextView>
                    </LinearLayout>
                </LinearLayout>
			<FrameLayout 
			    android:id="@+id/id_relativelayout_sport_bg" 
			    android:layout_marginTop="30dp"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_below="@id/id_linearlayout_title">
                   
			    <com.jibu.app.view.SmartImageView 
			        android:layout_width="match_parent"
			        android:layout_height="wrap_content"
			        android:scaleType="fitXY"
			        android:id="@+id/id_smartview_sport_bg"
			        />
			    
			<RelativeLayout
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    >
                 
			    <RelativeLayout 
			        android:id="@+id/id_relativelayout_sport"
			        android:layout_width="81dp"
			        android:layout_height="66.5dp"
			        android:layout_alignParentRight="true"
			        android:layout_marginRight="27dp"
			        android:background="@drawable/guapai"
			        >
					<TextView 
					    android:id="@+id/id_textview_step_or_time"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_centerHorizontal="true"
			            android:layout_marginTop="12dp"
			            android:textSize="12sp"
			            android:textColor="#ffffff"
			            android:text="@string/step"
			            >
			            
			        </TextView>
			        
			        <TextView 
			            android:id="@+id/id_textview_sport_step"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_centerHorizontal="true"
			            android:textSize="24sp"
			            android:textColor="#ffffff"
			            android:text="32344"
			            android:layout_marginTop="34dp">
			            
			        </TextView>
			    </RelativeLayout>
			    
			    <RelativeLayout
			        android:id="@+id/id_relativelayout_longsit"
			        android:layout_width="56.5dp"
			        android:layout_height="66.5dp"
			        android:layout_marginLeft="35dp"
			        
			        android:background="@drawable/guapai2">
			        
			        <TextView 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_centerHorizontal="true"
			            android:textSize="12sp"
			            android:textColor="#ffffff"
			            android:text="@string/long_sit"
			            android:layout_marginTop="12dp">
			            
			        </TextView>
			        
			        <TextView 
			            android:id="@+id/id_textview_sit_time"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_centerHorizontal="true"
			            android:textSize="24sp"
			            android:textColor="#ffffff"
			            android:text="3"
			            android:layout_marginTop="34dp">
			            
			        </TextView>
			        
			    </RelativeLayout>
			</RelativeLayout>
		</FrameLayout>
			<TextView
			    android:id="@+id/id_textview_sport_type"
			    android:layout_below="@id/id_relativelayout_sport_bg" 
			    android:layout_marginTop="30dp"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:textSize="17sp"
			    android:textColor="#25222a"
			    android:gravity="center"
			    android:text="@string/s_sport">
			    
			</TextView>
			
			<TextView 
			    android:id="@+id/id_textview_sport_value"
			    android:layout_below="@id/id_textview_sport_type"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:layout_marginTop="15dp"
			    android:textSize="13sp"
			    android:textColor="#25222a"
			    android:gravity="center"
			    android:text="@string/gandeibucuo">
			</TextView>
		
			<Button
			    android:id="@+id/id_button_share"
			    android:layout_width="match_parent"
			    android:layout_height="40dp"
			    android:layout_marginLeft="35dp"
			    android:layout_marginRight="35dp"
			    android:layout_marginTop="60dp"
			    android:layout_below="@id/id_textview_sport_value"
			    android:gravity="center"
			    android:textColor="#ffffff"
			    android:textSize="17sp"
			    android:text="@string/xuanyaoyixia"
			    android:background="@drawable/share_button">
			    
			</Button>
			
</RelativeLayout>
