<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/defalut_background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/id_linearlayout_title"
        style="@style/CommonTitleBg" >

        <LinearLayout
            android:id="@+id/id_linearlayout_title_left"
            style="@style/CommonTitleLeftBg" >

            <ImageView style="@style/CommonTitleBack"
                android:background="@drawable/icon_common_back2"
                 />
       
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_linearlayout_title_center"
            style="@style/CommonTitleCenterBg" >

            <TextView
                android:id="@+id/id_textview_title_center"
                style="@style/CommonTitleText"
                android:text="@string/setup_sex" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/id_linearlayout_title_right"
            style="@style/CommonTitleRightBg"
            android:visibility="invisible"
             >

            <TextView
                android:id="@+id/id_textview_title_right"
                style="@style/CommonTitleTextRight"
                android:text="@string/step_over" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/info1"
        android:layout_centerInParent="true"
        android:layout_marginTop="50.0dp"
        android:layout_marginBottom="40.0dp"
        android:orientation="vertical" >
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView 
                android:id="@+id/id_imageview_sex_woman"
                android:layout_width="73.5dp"
                android:layout_height="77dp"
                android:src="@drawable/woman_selector"
                android:padding="5.0dp"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:clickable="true"
                android:contentDescription="@null"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dp"
                android:text="@string/women"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Woman"
                android:textColor="@color/gray"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            >
            <ImageView 
                android:id="@+id/id_imageview_sex_man"
                android:layout_width="57.5dp"
                android:layout_height="75.5dp"
                android:src="@drawable/man_selector"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:padding="5.0dp"
                android:clickable="true"
                android:contentDescription="@null"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dp"
                android:text="@string/man"
                android:textSize="20dp"
                android:layout_gravity="center_horizontal"
                />
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Man"
                android:textColor="@color/gray"
                android:textSize="16dp"
                android:layout_gravity="center_horizontal"
                />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/info1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:text="@string/personalinfo_warning"
        android:textColor="@color/gray"
        android:layout_marginBottom="20.0dp" />

</RelativeLayout>